fix: icons layout on mobile

--- a/1-styles.css
+++ b/1-styles.css
@@ -333,6 +333,10 @@ a:active {
   }
 }
 @media screen and (max-width: 480px) {
+  .about-cards {
+    flex-direction: column;
+    align-items: center;
+  }
   .about p {
     padding: 0 0;
   }
